--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,2 @@
-ChatterBot         1.0.4
-chatterbot-corpus  1.2.2
-click              8.1.8
-colorama           0.4.6
-importlib-metadata 6.7.0
-joblib             1.3.2
-mathparse          0.1.2
-nltk               3.8.1
-packaging          24.0
-Pint               0.18
-pip                20.1.1
-pymongo            3.13.0
-python-dateutil    2.7.5
+chatterBot         1.0.4
 pytz               2025.2
-regex              2024.4.16
-setuptools         47.1.0
-six                1.17.0
-SQLAlchemy         1.2.19
-tqdm               4.67.1
-typing-extensions  4.7.1
-zipp               3.15.0
